# Orion

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci-docker.yml  ci-perf.yml  ci-soak.yml  ci.yml
crates/auth/: README.md
crates/client/: Cargo.toml  README.md
crates/cluster/: Cargo.toml  README.md
crates/control-plane/: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: compat.rs
crates/data-plane/: README.md
crates/macros/: README.md
crates/node/: Cargo.toml
crates/orion/: Cargo.toml  README.md  build.rs
crates/orion-auth/: Cargo.toml
crates/orion-client/: Cargo.toml
crates/orion-client/examples/: camera_pipeline_publish.rs  camera_provider_publish.rs  control_plane_write_watch.rs  executor_register_and_watch.rs  executor_watch.rs  multi_watch.rs  provider_register_and_watch.rs  provider_watch.rs
crates/orion-client/src/: app.rs  control_plane.rs  error.rs  executor.rs  graph.rs  lib.rs  provider.rs  resource.rs  response.rs  session.rs  stream.rs  tests.rs
crates/orion-client/src/app/: local_unary.rs  publish.rs  runtime.rs  service.rs
crates/orion-client/src/control_plane/: metrics.rs
crates/orion-client/src/tests/: local_defaults.rs  local_services.rs
crates/orion-cluster/: Cargo.toml
crates/orion-control-plane/: Cargo.toml
crates/orion-control-plane/benches/: mutation_apply.rs
crates/orion-control-plane/src/: lib.rs  metrics_export.rs  metrics_support.rs  state.rs
crates/orion-control-plane/src/messages/: client.rs  control.rs  metrics.rs  mod.rs  sync.rs
crates/orion-control-plane/src/records/: cluster.rs  config_decode.rs  inventory.rs  mod.rs  resources.rs  workloads.rs
crates/orion-control-plane/tests/: metrics_export.rs
crates/orion-control-plane/tests/fixtures/: communication_metrics.prom
crates/orion-core/: Cargo.toml  README.md
crates/orion-data-plane/: Cargo.toml
crates/orion-data-plane/src/: peer.rs
crates/orion-macros/: Cargo.toml
crates/orion-macros/src/: lib.rs
crates/orion-node/: Cargo.toml  README.md
crates/orion-node/benches/: persistence_replay.rs  state_snapshot.rs
crates/orion-node/examples/: local_engine.rs
crates/orion-node/src/: app.rs  blocking.rs  config.rs  lib.rs  lock.rs  managed_transport.rs  peer.rs  service.rs  storage.rs  storage_io.rs
crates/orion-node/src/app/: builder.rs  desired_state.rs  desired_sync.rs  local_clients.rs  local_control.rs  observability.rs  peer_sync.rs  peer_sync_client.rs  persistence.rs  reconcile.rs  startup.rs  startup_loops.rs  state_access.rs  status_admin.rs  types.rs
crates/orion-node/src/app/desired_state/: views.rs  watchers.rs
crates/orion-node/src/app/observability/: classification.rs  metrics.rs
crates/orion-node/src/app/persistence/: worker.rs
crates/orion-node/src/auth/: crypto.rs  policy.rs  store.rs
crates/orion-node/src/auth/tests/: http.rs  local_ipc.rs  persistence.rs
crates/orion-node/src/config/: runtime_tuning.rs  tests.rs
crates/orion-node/src/service/: tests.rs
crates/orion-node/src/tests/: mod.rs  runtime.rs  runtime_http.rs
crates/orion-node/src/tests/ipc/: local_sessions.rs
crates/orion-node/src/tests/runtime/: async_ops.rs  composition.rs  mod.rs  validation.rs
crates/orion-node/src/tests/state/: communication_metrics.rs  compaction.rs  mod.rs  observability.rs  persistence_basics.rs  replay.rs  replay_fallback.rs  restarts.rs
crates/orion-node/src/tests/state/transport/: audit_shutdown.rs  mod.rs  surfaces.rs
crates/orion-node/src/tests/sync/: mod.rs  tls.rs
crates/orion-node/src/tests/sync/peer_sync/: basic.rs  cached.rs  mod.rs  parallel.rs  phase_transitions.rs  resilience.rs
crates/orion-node/tests/: docker_client_examples.rs  docker_client_orionctl_examples.rs  docker_cluster_adversarial.rs  docker_cluster_scale.rs  perf_baselines.rs  process_http.rs  process_http_ipc.rs
crates/orion-node/tests/docker_cluster_baseline/: replication.rs  resources.rs
crates/orion-node/tests/support/: docker_cluster.rs  mod.rs
crates/orion-perf-check/: Cargo.toml
crates/orion-perf-check/src/: main.rs
crates/orion-runtime/: Cargo.toml  README.md
crates/orion-service/: Cargo.toml
crates/orion-transport-common/: Cargo.toml  README.md
crates/orion-transport-common/src/: lib.rs
crates/orion-transport-http/: Cargo.toml
crates/orion-transport-http/src/: codec.rs  error.rs  lib.rs  message.rs  tests.rs  transport.rs
crates/orion-transport-ipc/: Cargo.toml  README.md
crates/orion-transport-ipc/benches/: ipc_latency.rs
crates/orion-transport-ipc/src/: error.rs  fd_frame.rs  lib.rs  memory.rs  unix.rs
crates/orion-transport-quic/: Cargo.toml  README.md
crates/orion-transport-quic/benches/: quic_perf.rs
crates/orion-transport-quic/src/: codec.rs  endpoint.rs  frame.rs  lib.rs  memory.rs  socket.rs  transport.rs
crates/orion-transport-quic/src/socket/: tests.rs
crates/orion-transport-tcp/: Cargo.toml  README.md
crates/orion-transport-tcp/src/: codec.rs  error.rs  lib.rs  memory.rs  socket.rs  transport.rs
crates/orion/src/: build_info.rs  lib.rs
crates/orion/tests/: macro_paths.rs
crates/orionctl/: Cargo.toml  README.md  build_info.rs
crates/orionctl/src/: build_info.rs  cli.rs  handlers.rs  main.rs  maintenance.rs  render.rs  transport.rs
crates/orionctl/src/handlers/: apply.rs  delete.rs  describe.rs  get.rs  get_communication.rs  peers.rs  watch.rs
crates/orionctl/tests/: cli.rs  cli_apply.rs  cli_describe.rs  cli_get.rs  cli_maintenance.rs  cli_observed.rs  cli_transport.rs  cli_watch.rs
crates/orionctl/tests/support/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: reconcile.rs
crates/runtime/src/: lib.rs  reconcile.rs  state.rs
crates/service/: Cargo.toml  README.md
docs/: README.md  architecture-crate-map.md  audit-logging.md  development.md  logging.md  node-env.md  observability.md  performance-concurrency.md  public-api.md  release-validation.md  testing.md
scripts/: check-file-sizes.sh  ci.sh  repo-clean.sh  verify-package-tarballs.sh
testing/: README.md
(+137 files in other folders)
