[workspace]
members = [
    "crates/core",
    "crates/auth",
    "crates/service",
    "crates/macros",
    "crates/control-plane",
    "crates/data-plane",
    "crates/cluster",
    "crates/runtime",
    "crates/client",
    "crates/orionctl",
    "crates/transport-common",
    "crates/transport-http",
    "crates/transport-tcp",
    "crates/transport-quic",
    "crates/transport-ipc",
    "crates/node",
    "crates/perf-check",
    "crates/orion",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Prometheus-Dynamics/Orion"
homepage = "https://github.com/Prometheus-Dynamics/Orion"
rust-version = "1.94"
authors = ["Mathias Petersen"]

[workspace.dependencies]
orion-auth = { path = "crates/auth", version = "1.0.0" }
orion-client = { path = "crates/client", version = "1.0.0" }
orion-cluster = { path = "crates/cluster", version = "1.0.0" }
orion-control-plane = { path = "crates/control-plane", version = "1.0.0" }
orion-core = { path = "crates/core", version = "1.0.0" }
orion-data-plane = { path = "crates/data-plane", version = "1.0.0" }
orion-macros = { path = "crates/macros", version = "1.0.0" }
orion-node = { path = "crates/node", version = "1.0.0" }
orion = { path = "crates/orion", version = "1.0.0", default-features = false }
orion-runtime = { path = "crates/runtime", version = "1.0.0" }
orion-service = { path = "crates/service", version = "1.0.0" }
orion-transport-common = { path = "crates/transport-common", version = "1.0.0" }
orion-transport-http = { path = "crates/transport-http", version = "1.0.0" }
orion-transport-ipc = { path = "crates/transport-ipc", version = "1.0.0" }
orion-transport-quic = { path = "crates/transport-quic", version = "1.0.0" }
orion-transport-tcp = { path = "crates/transport-tcp", version = "1.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.1", default-features = false }
toml = "0.9.8"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4.6.1", features = ["derive"] }
criterion = { version = "0.8.2", default-features = false }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hyper = "1.6"
hyper-util = { version = "0.1.20", features = ["tokio"] }
libc = "0.2"
proc-macro2 = "1.0"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
quote = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.14.7"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
rkyv = { version = "0.8.15", features = ["uuid-1", "little_endian", "pointer_width_64"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1.14"
syn = { version = "2.0", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "env-filter"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_attributes = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
print_stderr = "allow"
print_stdout = "allow"
todo = "deny"
unimplemented = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"
