[package]
name = "orion-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust client SDK for talking to the Orion daemon."
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = ["ipc"]
ipc = ["dep:orion-transport-ipc"]

[dependencies]
orion-core.workspace = true
orion-control-plane.workspace = true
orion-runtime.workspace = true
orion-transport-ipc = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "fs", "sync"] }

[dev-dependencies]
orion-transport-http.workspace = true
