[package]
name = "orion-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Optional procedural macros for Orion."
readme = "README.md"

[lints]
workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
