[package]
name = "orion-transport-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Same-device IPC transport adapter for Orion."
readme = "README.md"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
orion-control-plane.workspace = true
orion-data-plane.workspace = true
orion-core.workspace = true
orion-transport-common.workspace = true
serde.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "sync", "time"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "cargo_bench_support"] }

[[bench]]
name = "ipc_latency"
harness = false
