[package]
name = "orion-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "QUIC transport adapter for Orion data-plane traffic."
readme = "README.md"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
insecure-self-signed = ["dep:rcgen"]

[dependencies]
orion-data-plane.workspace = true
orion-core.workspace = true
orion-transport-common.workspace = true
serde.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
quinn.workspace = true
rustls = { workspace = true, features = ["ring"] }
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
rcgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "cargo_bench_support"] }
rcgen.workspace = true

[[bench]]
name = "quic_perf"
harness = false
