[package]
name = "orion-transport-tcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TCP transport adapter for Orion data-plane traffic."
readme = "README.md"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
orion-data-plane.workspace = true
orion-core.workspace = true
orion-transport-common.workspace = true
serde.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "cargo_bench_support"] }
rcgen.workspace = true

[[bench]]
name = "tcp_perf"
harness = false
