[package]
name = "orionctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Operator CLI for the Orion daemon."
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "orionctl"
path = "src/main.rs"

[dependencies]
clap.workspace = true
orion = { workspace = true, features = ["control-plane", "core", "macros"] }
orion-client.workspace = true
orion-control-plane.workspace = true
orion-core.workspace = true
orion-transport-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true

[dev-dependencies]
orion = { workspace = true, features = ["client", "control-plane", "core", "transport-http", "transport-ipc"] }
orion-node.workspace = true
