[package]
name = "orion-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Generic request service and middleware pipeline primitives for Orion."
readme = "README.md"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
